syntax = "proto3";
package broker.v1;
option go_package = "github.com/textileio/broker-core/gen/broker/v1;broker";

import "google/protobuf/timestamp.proto";

message AuctionSummary {
    string id = 1;
    string batch_id = 2;
    bool deal_verified = 3;
    repeated string excluded_storage_providers = 4;
    string status = 5;
    google.protobuf.Timestamp started_at = 6;
    google.protobuf.Timestamp updated_at = 7;
    uint64 duration = 8;
}

message Bid {
	string storage_provider_id = 1;
	string bidder_id = 2;
	int64 ask_price = 3; // attoFIL per GiB per epoch
	int64 verified_ask_price = 4; // attoFIL per GiB per epoch
	uint64 start_epoch = 5;
	bool fast_retrieval = 6;
	google.protobuf.Timestamp received_at = 7;
}

message AuctionStarted {
    google.protobuf.Timestamp ts = 1;
    AuctionSummary auction = 2;
}

message AuctionBidReceived {
    google.protobuf.Timestamp ts = 1;
    AuctionSummary auction = 2;
    Bid bid = 3;
}

message AuctionWinnerSelected {
    google.protobuf.Timestamp ts = 1;
    AuctionSummary auction = 2;
    Bid bid = 3;
}

message AuctionWinnerAcked {
    google.protobuf.Timestamp ts = 1;
    AuctionSummary auction = 2;
    Bid bid = 3;
}

message AuctionProposalCidDelivered {
    google.protobuf.Timestamp ts = 1;
    string auction_id = 2;
    string bidder_id = 3;
    string bid_id = 4;
    bytes proposal_cid = 5;
    string error_cause = 6;
}
